[package]
name = "lendaswap-wasm-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lendaswap Client SDK - WASM bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# Core SDK
lendaswap-core = { path = "../core" }

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

# Logging
console_log = { version = "1", features = ["color"] }
log = "0.4"

# WASM bindings
js-sys = "0.3"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }

# Panic hook for better error messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Random for WASM
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
getrandom_latest = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

rust_decimal = { version = "1", features = ["serde-with-float"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
